# khonsu

./: .gitignore  Cargo.toml  README.md  build-release.sh
fixture/: cf_api_create_post_1.2.3.4.json  cf_api_create_response_1.2.3.4.json  cf_api_list_response_1.1.1.1.json  cf_api_list_response_empty.json  cf_api_update_put_1.2.3.4.json  cf_api_update_response_1.2.3.4.json  detect-ip.sh
src/: config.rs  main.rs
src/daemon/: detect.rs  mod.rs  service.rs
src/util/: mod.rs  test.rs
