[package]
name = "khonsu"
version = "0.1.0"
edition = "2018"
authors = ["Mark Pritchard <mpritcha@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/markpritchard/khonsu"
repository = "https://github.com/markpritchard/khonsu"
description = "A dynamic DNS client"
keywords = ["ddns", "dynamic dns"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = "2.33.0"
cloudflare = "0.6"
env_logger = "0.7"
log = "0.4"
regex = "1.3"
reqwest = { version = "0.10", features = ["blocking"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"

[dev-dependencies]
mockito = "0.23"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
